[project]
name = "test-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Hamza Echamlali",email = "echamlali.hamza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "test_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
